fix: fix login logic
