# docs/swagger.json
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/handler.SignedResponse"
                         }
                     },
                     "400": {
@@ -104,6 +104,31 @@
         }
     },
     "definitions": {
+        "handler.ResponsePayload": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.SignedResponse": {
+            "type": "object",
+            "properties": {
+                "payload": {
+                    "$ref": "#/definitions/handler.ResponsePayload"
+                },
+                "signature": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "vhid": {
+                    "type": "string"
+                }
+            }
+        },
         "models.LoginPayload": {
             "type": "object",
             "properties": {
@@ -114,6 +139,9 @@
                 "password": {
                     "type": "string",
                     "example": "securepassword123"
+                },
+                "vhid": {
+                    "type": "string"
                 }
             }
         },
